--- a/SistemaHospitalUNI/nbproject/project.properties
+++ b/SistemaHospitalUNI/nbproject/project.properties
@@ -28,12 +28,14 @@ dist.jar=${dist.dir}/SistemaHospitalUNI.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.mysql-connector-java-5.1.23-bin.jar=/home/crdzbird/netbeans-8.0.2/ide/modules/ext/mysql-connector-java-5.1.23-bin.jar
+file.reference.mysql-connector-java-5.1.35-bin.jar=src\\lib\\mysql-connector-java-5.1.35-bin.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.hibernate4-support.classpath}:\
     ${libs.jpa2-persistence.classpath}:\
-    ${file.reference.mysql-connector-java-5.1.23-bin.jar}
+    ${file.reference.mysql-connector-java-5.1.23-bin.jar}:\
+    ${file.reference.mysql-connector-java-5.1.35-bin.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
