--- a/SistemaHospitalUNI/nbproject/project.properties
+++ b/SistemaHospitalUNI/nbproject/project.properties
@@ -27,15 +27,19 @@ dist.dir=dist
 dist.jar=${dist.dir}/SistemaHospitalUNI.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
-file.reference.mysql-connector-java-5.1.23-bin.jar=/home/crdzbird/netbeans-8.0.2/ide/modules/ext/mysql-connector-java-5.1.23-bin.jar
 file.reference.mysql-connector-java-5.1.35-bin.jar=src\\lib\\mysql-connector-java-5.1.35-bin.jar
+file.reference.synthetica.jar=src\\lib\\synthetica.jar
+file.reference.syntheticaAluOxide.jar=src\\lib\\syntheticaAluOxide.jar
+file.reference.syntheticaBlueLight.jar=src\\lib\\syntheticaBlueLight.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.hibernate4-support.classpath}:\
     ${libs.jpa2-persistence.classpath}:\
-    ${file.reference.mysql-connector-java-5.1.23-bin.jar}:\
-    ${file.reference.mysql-connector-java-5.1.35-bin.jar}
+    ${file.reference.mysql-connector-java-5.1.35-bin.jar}:\
+    ${file.reference.syntheticaAluOxide.jar}:\
+    ${file.reference.synthetica.jar}:\
+    ${file.reference.syntheticaBlueLight.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
