--- a/SistemaHospitalUNI/nbproject/project.properties
+++ b/SistemaHospitalUNI/nbproject/project.properties
@@ -27,7 +27,20 @@ dist.dir=dist
 dist.jar=${dist.dir}/SistemaHospitalUNI.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.ffmpeg-2.1.1-windows-x86.jar=src/Librerias/ffmpeg-2.1.1-windows-x86.jar
+file.reference.ffmpeg-2.1.1-windows-x86_64.jar=src/Librerias/ffmpeg-2.1.1-windows-x86_64.jar
+file.reference.javacpp.jar=src/Librerias/javacpp.jar
+file.reference.javacv-linux-x86.jar=src/Librerias/javacv-linux-x86.jar
+file.reference.javacv-linux-x86_64.jar=src/Librerias/javacv-linux-x86_64.jar
+file.reference.javacv-macosx-x86_64.jar=src/Librerias/javacv-macosx-x86_64.jar
+file.reference.javacv-windows-x86.jar=src/Librerias/javacv-windows-x86.jar
+file.reference.javacv-windows-x86_64.jar=src/Librerias/javacv-windows-x86_64.jar
+file.reference.javacv.jar=src/Librerias/javacv.jar
+file.reference.jcalendar-1.4.jar=src/Librerias/jcalendar-1.4.jar
+file.reference.jdatepicker-1.3.4.jar=src/Librerias/jdatepicker-1.3.4.jar
 file.reference.mysql-connector-java-5.1.35-bin.jar=src\\lib\\mysql-connector-java-5.1.35-bin.jar
+file.reference.opencv-2.4.8-windows-x86.jar=src/Librerias/opencv-2.4.8-windows-x86.jar
+file.reference.opencv-2.4.8-windows-x86_64.jar=src/Librerias/opencv-2.4.8-windows-x86_64.jar
 file.reference.synthetica.jar=src\\lib\\synthetica.jar
 file.reference.syntheticaAluOxide.jar=src\\lib\\syntheticaAluOxide.jar
 file.reference.syntheticaBlueLight.jar=src\\lib\\syntheticaBlueLight.jar
@@ -39,7 +52,20 @@ javac.classpath=\
     ${file.reference.mysql-connector-java-5.1.35-bin.jar}:\
     ${file.reference.syntheticaAluOxide.jar}:\
     ${file.reference.synthetica.jar}:\
-    ${file.reference.syntheticaBlueLight.jar}
+    ${file.reference.syntheticaBlueLight.jar}:\
+    ${file.reference.ffmpeg-2.1.1-windows-x86.jar}:\
+    ${file.reference.ffmpeg-2.1.1-windows-x86_64.jar}:\
+    ${file.reference.javacpp.jar}:\
+    ${file.reference.javacv-linux-x86.jar}:\
+    ${file.reference.javacv-linux-x86_64.jar}:\
+    ${file.reference.javacv-macosx-x86_64.jar}:\
+    ${file.reference.javacv-windows-x86.jar}:\
+    ${file.reference.javacv-windows-x86_64.jar}:\
+    ${file.reference.javacv.jar}:\
+    ${file.reference.jcalendar-1.4.jar}:\
+    ${file.reference.jdatepicker-1.3.4.jar}:\
+    ${file.reference.opencv-2.4.8-windows-x86.jar}:\
+    ${file.reference.opencv-2.4.8-windows-x86_64.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
