--- a/SistemaHospitalUNI/nbproject/project.properties
+++ b/SistemaHospitalUNI/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=SistemaHospitalUNI
+application.vendor=ingdonaldo
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -26,6 +27,7 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/SistemaHospitalUNI.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
 file.reference.ffmpeg-2.1.1-windows-x86.jar=src/Librerias/ffmpeg-2.1.1-windows-x86.jar
 file.reference.ffmpeg-2.1.1-windows-x86_64.jar=src/Librerias/ffmpeg-2.1.1-windows-x86_64.jar
@@ -40,8 +42,6 @@ file.reference.jcalendar-1.4.jar=src/Librerias/jcalendar-1.4.jar
 file.reference.jdatepicker-1.3.4.jar=src/Librerias/jdatepicker-1.3.4.jar
 file.reference.JPanelSlider.jar=src/Librerias/JPanelSlider.jar
 file.reference.mail.jar=src\\lib\\mail.jar
-file.reference.mysql-connector-java-5.1.23-bin.jar=home/crdzbird/netbeans-8.0.2/ide/modules/ext/mysql-connector-java-5.1.23-bin.jar
-file.reference.mysql-connector-java-5.1.23-bin.jar-1=/home/crdzbird/netbeans-8.0.2/ide/modules/ext/mysql-connector-java-5.1.23-bin.jar
 file.reference.mysql-connector-java-5.1.35-bin.jar=src/lib/mysql-connector-java-5.1.35-bin.jar
 file.reference.opencv-2.4.8-windows-x86.jar=src/Librerias/opencv-2.4.8-windows-x86.jar
 file.reference.opencv-2.4.8-windows-x86_64.jar=src/Librerias/opencv-2.4.8-windows-x86_64.jar
@@ -71,9 +71,7 @@ javac.classpath=\
     ${file.reference.opencv-2.4.8-windows-x86.jar}:\
     ${file.reference.opencv-2.4.8-windows-x86_64.jar}:\
     ${file.reference.JPanelSlider.jar}:\
-    ${file.reference.mysql-connector-java-5.1.23-bin.jar}:\
-    ${file.reference.mail.jar}:\
-    ${file.reference.mysql-connector-java-5.1.23-bin.jar-1}
+    ${file.reference.mail.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
