--- a/SistemaHospitalUNI/nbproject/project.properties
+++ b/SistemaHospitalUNI/nbproject/project.properties
@@ -42,6 +42,7 @@ file.reference.jcalendar-1.4.jar=src/Librerias/jcalendar-1.4.jar
 file.reference.jdatepicker-1.3.4.jar=src/Librerias/jdatepicker-1.3.4.jar
 file.reference.JPanelSlider.jar=src/Librerias/JPanelSlider.jar
 file.reference.mail.jar=src\\lib\\mail.jar
+file.reference.mysql-connector-java-5.1.23-bin.jar-1=/home/crdzbird/netbeans-8.0.2/ide/modules/ext/mysql-connector-java-5.1.23-bin.jar
 file.reference.mysql-connector-java-5.1.35-bin.jar=src/lib/mysql-connector-java-5.1.35-bin.jar
 file.reference.opencv-2.4.8-windows-x86.jar=src/Librerias/opencv-2.4.8-windows-x86.jar
 file.reference.opencv-2.4.8-windows-x86_64.jar=src/Librerias/opencv-2.4.8-windows-x86_64.jar
@@ -71,7 +72,8 @@ javac.classpath=\
     ${file.reference.opencv-2.4.8-windows-x86.jar}:\
     ${file.reference.opencv-2.4.8-windows-x86_64.jar}:\
     ${file.reference.JPanelSlider.jar}:\
-    ${file.reference.mail.jar}
+    ${file.reference.mail.jar}:\
+    ${file.reference.mysql-connector-java-5.1.23-bin.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
