--- a/SistemaHospitalUNI/nbproject/project.properties
+++ b/SistemaHospitalUNI/nbproject/project.properties
@@ -73,7 +73,8 @@ javac.classpath=\
     ${file.reference.opencv-2.4.8-windows-x86_64.jar}:\
     ${file.reference.JPanelSlider.jar}:\
     ${file.reference.mail.jar}:\
-    ${file.reference.mysql-connector-java-5.1.23-bin.jar-1}
+    ${file.reference.mysql-connector-java-5.1.23-bin.jar-1}:\
+    ${libs.absolutelayout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
