--- a/SistemaHospitalUNI/nbproject/project.properties
+++ b/SistemaHospitalUNI/nbproject/project.properties
@@ -29,8 +29,35 @@ dist.jar=${dist.dir}/SistemaHospitalUNI.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.barbecue-1.5-beta1.jar=src/Librerias/barbecue-1.5-beta1.jar
+file.reference.batik-anim.jar=src/Librerias/batik-anim.jar
+file.reference.batik-awt-util.jar=src/Librerias/batik-awt-util.jar
+file.reference.batik-bridge.jar=src/Librerias/batik-bridge.jar
+file.reference.batik-css.jar=src/Librerias/batik-css.jar
+file.reference.batik-dom.jar=src/Librerias/batik-dom.jar
+file.reference.batik-ext.jar=src/Librerias/batik-ext.jar
+file.reference.batik-gvt.jar=src/Librerias/batik-gvt.jar
+file.reference.batik-parser.jar=src/Librerias/batik-parser.jar
+file.reference.batik-script.jar=src/Librerias/batik-script.jar
+file.reference.batik-svg-dom.jar=src/Librerias/batik-svg-dom.jar
+file.reference.batik-svggen.jar=src/Librerias/batik-svggen.jar
+file.reference.batik-util.jar=src/Librerias/batik-util.jar
+file.reference.batik-xml.jar=src/Librerias/batik-xml.jar
+file.reference.castor-1.2.jar=src/Librerias/castor-1.2.jar
+file.reference.commons-beanutils-1.8.2.jar=src/Librerias/commons-beanutils-1.8.2.jar
+file.reference.commons-collections-3.2.1.jar=src/Librerias/commons-collections-3.2.1.jar
+file.reference.commons-digester-2.1.jar=src/Librerias/commons-digester-2.1.jar
+file.reference.commons-logging-1.1.1.jar=src/Librerias/commons-logging-1.1.1.jar
+file.reference.commons-logging-1.1.jar=src/Librerias/commons-logging-1.1.jar
 file.reference.ffmpeg-2.1.1-windows-x86.jar=src/Librerias/ffmpeg-2.1.1-windows-x86.jar
 file.reference.ffmpeg-2.1.1-windows-x86_64.jar=src/Librerias/ffmpeg-2.1.1-windows-x86_64.jar
+file.reference.groovy-all-2.0.1.jar=src/Librerias/groovy-all-2.0.1.jar
+file.reference.iText-2.1.7.js2.jar=src/Librerias/iText-2.1.7.js2.jar
+file.reference.jasperreports-5.1.2.jar=src/Librerias/jasperreports-5.1.2.jar
+file.reference.jasperreports-chart-themes-3.7.4.jar=src/Librerias/jasperreports-chart-themes-3.7.4.jar
+file.reference.jasperreports-extensions-3.5.3.jar=src/Librerias/jasperreports-extensions-3.5.3.jar
+file.reference.jasperreports-fonts-3.7.4.jar=src/Librerias/jasperreports-fonts-3.7.4.jar
+file.reference.jasperreports-javaflow-5.1.2.jar=src/Librerias/jasperreports-javaflow-5.1.2.jar
 file.reference.javacpp.jar=src/Librerias/javacpp.jar
 file.reference.javacv-linux-x86.jar=src/Librerias/javacv-linux-x86.jar
 file.reference.javacv-linux-x86_64.jar=src/Librerias/javacv-linux-x86_64.jar
@@ -38,17 +65,28 @@ file.reference.javacv-macosx-x86_64.jar=src/Librerias/javacv-macosx-x86_64.jar
 file.reference.javacv-windows-x86.jar=src/Librerias/javacv-windows-x86.jar
 file.reference.javacv-windows-x86_64.jar=src/Librerias/javacv-windows-x86_64.jar
 file.reference.javacv.jar=src/Librerias/javacv.jar
+file.reference.jaxen-1.1.1.jar=src/Librerias/jaxen-1.1.1.jar
 file.reference.jcalendar-1.4.jar=src/Librerias/jcalendar-1.4.jar
+file.reference.jcommon-1.0.15.jar=src/Librerias/jcommon-1.0.15.jar
 file.reference.jdatepicker-1.3.4.jar=src/Librerias/jdatepicker-1.3.4.jar
+file.reference.jfreechart-1.0.12.jar=src/Librerias/jfreechart-1.0.12.jar
+file.reference.jpa.jar=src/Librerias/jpa.jar
 file.reference.JPanelSlider.jar=src/Librerias/JPanelSlider.jar
 file.reference.mail.jar=src\\lib\\mail.jar
 file.reference.mysql-connector-java-5.1.23-bin.jar-1=/home/crdzbird/netbeans-8.0.2/ide/modules/ext/mysql-connector-java-5.1.23-bin.jar
 file.reference.mysql-connector-java-5.1.35-bin.jar=src/lib/mysql-connector-java-5.1.35-bin.jar
 file.reference.opencv-2.4.8-windows-x86.jar=src/Librerias/opencv-2.4.8-windows-x86.jar
 file.reference.opencv-2.4.8-windows-x86_64.jar=src/Librerias/opencv-2.4.8-windows-x86_64.jar
+file.reference.png-encoder-1.5.jar=src/Librerias/png-encoder-1.5.jar
+file.reference.poi-3.7-20101029.jar=src/Librerias/poi-3.7-20101029.jar
+file.reference.rhino-1.7R1.jar=src/Librerias/rhino-1.7R1.jar
+file.reference.spring.jar=src/Librerias/spring.jar
 file.reference.synthetica.jar=src/lib/synthetica.jar
 file.reference.syntheticaAluOxide.jar=src/lib/syntheticaAluOxide.jar
 file.reference.syntheticaBlueLight.jar=src/lib/syntheticaBlueLight.jar
+file.reference.xalan.jar=src/Librerias/xalan.jar
+file.reference.xml-apis-ext.jar=src/Librerias/xml-apis-ext.jar
+file.reference.xml-apis.jar=src/Librerias/xml-apis.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -74,7 +112,45 @@ javac.classpath=\
     ${file.reference.JPanelSlider.jar}:\
     ${file.reference.mail.jar}:\
     ${file.reference.mysql-connector-java-5.1.23-bin.jar-1}:\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.barbecue-1.5-beta1.jar}:\
+    ${file.reference.batik-anim.jar}:\
+    ${file.reference.batik-awt-util.jar}:\
+    ${file.reference.batik-bridge.jar}:\
+    ${file.reference.batik-css.jar}:\
+    ${file.reference.batik-dom.jar}:\
+    ${file.reference.batik-ext.jar}:\
+    ${file.reference.batik-gvt.jar}:\
+    ${file.reference.batik-parser.jar}:\
+    ${file.reference.batik-script.jar}:\
+    ${file.reference.batik-svg-dom.jar}:\
+    ${file.reference.batik-svggen.jar}:\
+    ${file.reference.batik-util.jar}:\
+    ${file.reference.batik-xml.jar}:\
+    ${file.reference.castor-1.2.jar}:\
+    ${file.reference.commons-beanutils-1.8.2.jar}:\
+    ${file.reference.commons-collections-3.2.1.jar}:\
+    ${file.reference.commons-digester-2.1.jar}:\
+    ${file.reference.commons-logging-1.1.1.jar}:\
+    ${file.reference.commons-logging-1.1.jar}:\
+    ${file.reference.groovy-all-2.0.1.jar}:\
+    ${file.reference.iText-2.1.7.js2.jar}:\
+    ${file.reference.jasperreports-5.1.2.jar}:\
+    ${file.reference.jasperreports-chart-themes-3.7.4.jar}:\
+    ${file.reference.jasperreports-extensions-3.5.3.jar}:\
+    ${file.reference.jasperreports-fonts-3.7.4.jar}:\
+    ${file.reference.jasperreports-javaflow-5.1.2.jar}:\
+    ${file.reference.jaxen-1.1.1.jar}:\
+    ${file.reference.jcommon-1.0.15.jar}:\
+    ${file.reference.jfreechart-1.0.12.jar}:\
+    ${file.reference.jpa.jar}:\
+    ${file.reference.png-encoder-1.5.jar}:\
+    ${file.reference.poi-3.7-20101029.jar}:\
+    ${file.reference.rhino-1.7R1.jar}:\
+    ${file.reference.spring.jar}:\
+    ${file.reference.xalan.jar}:\
+    ${file.reference.xml-apis-ext.jar}:\
+    ${file.reference.xml-apis.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
