--- a/SistemaHospitalUNI/nbproject/project.properties
+++ b/SistemaHospitalUNI/nbproject/project.properties
@@ -72,6 +72,7 @@ file.reference.jdatepicker-1.3.4.jar=src/Librerias/jdatepicker-1.3.4.jar
 file.reference.jfreechart-1.0.12.jar=src/Librerias/jfreechart-1.0.12.jar
 file.reference.jpa.jar=src/Librerias/jpa.jar
 file.reference.JPanelSlider.jar=src/Librerias/JPanelSlider.jar
+file.reference.l2fprod-common-all.jar=src/lib/l2fprod-common-all.jar
 file.reference.mail.jar=src\\lib\\mail.jar
 file.reference.mysql-connector-java-5.1.23-bin.jar-1=/home/crdzbird/netbeans-8.0.2/ide/modules/ext/mysql-connector-java-5.1.23-bin.jar
 file.reference.mysql-connector-java-5.1.35-bin.jar=src/lib/mysql-connector-java-5.1.35-bin.jar
@@ -81,6 +82,7 @@ file.reference.png-encoder-1.5.jar=src/Librerias/png-encoder-1.5.jar
 file.reference.poi-3.7-20101029.jar=src/Librerias/poi-3.7-20101029.jar
 file.reference.rhino-1.7R1.jar=src/Librerias/rhino-1.7R1.jar
 file.reference.spring.jar=src/Librerias/spring.jar
+file.reference.swingx-1.6.jar=C:\\Users\\Cristhian\\Downloads\\swingx-1.6.jar
 file.reference.synthetica.jar=src/lib/synthetica.jar
 file.reference.syntheticaAluOxide.jar=src/lib/syntheticaAluOxide.jar
 file.reference.syntheticaBlueLight.jar=src/lib/syntheticaBlueLight.jar
@@ -150,7 +152,9 @@ javac.classpath=\
     ${file.reference.spring.jar}:\
     ${file.reference.xalan.jar}:\
     ${file.reference.xml-apis-ext.jar}:\
-    ${file.reference.xml-apis.jar}
+    ${file.reference.xml-apis.jar}:\
+    ${file.reference.l2fprod-common-all.jar}:\
+    ${file.reference.swingx-1.6.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
